--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="dist/style.css?cb=123">
+    <title>Ambient Writer: Empty Document</title> 
+    <link rel="stylesheet" href="/dist/index.css">
 </head>
 <body>
-    <script src="dist/all.js?cb=123"></script>
+    <script src="index.js"></script>
 </body>
 </html>
