created basic layout for main and document

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="/dist/index.css">
 </head>
 <body>
+    <aside>
+
+    </aside>
+    <main>
+        <div id="document">
+
+        </div>
+    </main>
     <script src="index.js"></script>
 </body>
 </html>
