keypresses are now being registered in the document

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     </aside>
     <main>
-        <div id="document">
-
+        <div id="document" spellcheck="true" tabindex="-1">
+            
         </div>
     </main>
     <script src="index.js"></script>
